--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <h2>Why Choose The Mariner’s Chest?</h2>
         <div class="feature-grid">
             <div class="feature-item">
-                <img src="photos/sailinggear.jpeg" alt="High-Quality Gear">
+                <img src="Photos/sailinggear.jpeg" alt="High-Quality Gear">
                 <h3>High-Quality Gear</h3>
                 <p>Tested by real sailors, for real adventures.</p>
             </div>
             <div class="feature-item">
-                <img src="photos/instructor.jpeg" alt="Exclusive Resources">
+                <img src="Photos/instructor.jpeg" alt="Exclusive Resources">
                 <h3>Exclusive Resources</h3>
                 <p>Tutorials, sailing guides, and expert tips.</p>
             </div>
             <div class="feature-item">
-                <img src="photos/sailingchest.jpeg" alt="Custom Themed Boxes">
+                <img src="Photos/sailingchest.jpeg" alt="Custom Themed Boxes">
                 <h3>Custom Themed Boxes</h3>
                 <p>Offshore, weekend cruiser, or racing enthusiast – pick what suits you!</p>
             </div>
