--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section id="home" class="hero">
-        <div class="hero-overlay"></picture></div>
+        <div class="hero-overlay"><img src="./Photos/landingpagemain.webp" alt="background"></picture></div>
         <div class="hero-content">
             <h1>Premium Sailing Gear, Delivered Monthly</h1>
             <p>Curated gear, emergency essentials, and sailing knowledge for every sailor – from weekend cruisers to offshore explorers.</p>
