--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </nav>
     </header>
 
-    <section id="home" class="hero">
-        <div class="hero-overlay"></picture></div>
+    <section id="home" class="hero" style="background-image: url('Photos/landingpagemain.webp'); background-size: cover; background-position: center;">
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Premium Sailing Gear, Delivered Monthly</h1>
             <p>Curated gear, emergency essentials, and sailing knowledge for every sailor – from weekend cruisers to offshore explorers.</p>
             <a href="#subscribe" class="btn btn-primary">Subscribe Now</a>
         </div>
     </section>
-
+    
     <section id="why-subscribe" class="features">
         <h2>Why Choose The Mariner’s Chest?</h2>
         <div class="feature-grid">
