--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-content">
             <h1>Premium Sailing Gear, Delivered Monthly</h1>
             <p>Curated gear, emergency essentials, and sailing knowledge for every sailor – from weekend cruisers to offshore explorers.</p>
-            <a href="#subscribe" class="btn btn-primary">Subscribe Now</a>
+            <a href="subscribe.html" class="btn btn-primary">Subscribe Now</a>
         </div>
     </section>
     
