--- a/plans.html
+++ b/plans.html
@@ -38,7 +38,7 @@
               <li>✓ Digital content & guides</li>
               <li>✓ Basic sailing gear</li>
             </ul>
-            <a href="#subscribe" class="btn btn-secondary">Subscribe</a>
+            <a href="subscribe.html" class="btn btn-secondary">Subscribe</a>
           </div>
     
           <div class="plan-card highlight">
@@ -50,7 +50,7 @@
               <li>✓ Gourmet snacks</li>
               <li>✓ Exclusive sailing book</li>
             </ul>
-            <a href="#subscribe" class="btn btn-secondary">Subscribe</a>
+            <a href="subscribe.html" class="btn btn-secondary">Subscribe</a>
           </div>
     
           <div class="plan-card elite">
@@ -62,7 +62,7 @@
               <li>✓ Books, charts, & rare content</li>
               <li>✓ Full digital access & VIP support</li>
             </ul>
-            <a href="#subscribe" class="btn btn-secondary">Subscribe</a>
+            <a href="subscribe.html" class="btn btn-secondary">Subscribe</a>
           </div>
         </section>
       </main>
